force-app/main/default/objects/ACNW_Data_Audit_Log__c/ACNW_Data_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Data Audit Log</label>
    <nameField>
        <displayFormat>DAL-{000000000}</displayFormat>
        <label>Data Audit Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Audit Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>