force-app/main/default/objects/ACNW_Data_Audit_Log__c/fields/Logged_In_As__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_As__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logged In As</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>