force-app/main/default/objects/ACNW_Data_Audit_Log__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>