force-app/main/default/objects/ACNW_Data_Audit_Log__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>