force-app/main/default/objects/ACNW_Data_Audit_Log__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>