force-app/main/default/objects/ACNW_Data_Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Object_Name__c</columns>
    <columns>Field__c</columns>
    <columns>Old_Value__c</columns>
    <columns>New_Value__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>